[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["batch"] }
hex = "0.4.3"
thiserror = "2.0.12"
